# CSociety

./: .clang-format  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/include/: Society.h
Engine/include/Society/: Camera.h  Engine.h  Entity.h  Mesh.h  Model.h  Shader.h  Texture.h
Engine/include/Society/Components/: BoundingBoxDebugComponent.h  Collision.h  Component.h  ControllerComponent.h  SpriteComponent.h  TransformComponent.h
Engine/include/Society/Core/: Callbacks.h  Events.h  Log.h  Window.h
Engine/include/Society/Interfaces/: ISingleton.h
Engine/include/Society/Managers/: EventSystem.h  InputSystem.h  ResourceManager.h
Engine/include/Society/Meshes/: Cube.h  PrimitiveMesh.h  Quad.h  Sphere.h
Engine/src/Society/: Camera.cpp  Engine.cpp  Entity.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp
Engine/src/Society/Components/: BoundingBoxDebugComponent.cpp  Collision.cpp  Component.cpp  ControllerComponent.cpp  SpriteComponent.cpp  TransformComponent.cpp
Engine/src/Society/Core/: Callbacks.cpp  Events.cpp  Log.cpp  Window.cpp
Engine/src/Society/Managers/: EventSystem.cpp  InputSystem.cpp  ResourceManager.cpp
Engine/src/Society/Meshes/: Cube.cpp  Quad.cpp  Sphere.cpp
Game/: CMakeLists.txt
Game/resources/shaders/basic/: fragment.glsl  vertex.glsl
Game/resources/shaders/pbr/: pbr.frag  prefilter.frag
Game/src/: Entry.cpp  Game.cpp  Game.h  PBR.cpp  PBR.h  Player.cpp  Player.h  RayMarch.cpp  RayMarch.h
